# tolmodbus

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: modbus_crc.h  modbus_functions.h  modbus_serial.h
src/: modbus_config.cpp  modbus_config.h  modbus_crc.cpp  modbus_functions.cpp  modbus_serial.cpp
